--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html>
   <head>
     <meta charset="UTF-8">
     <title>Recipe Book</title>
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1 class='text-center'>Recipe Book</h1>
+    <h1 class='text-center mainTitle'>Recipe Book</h1>
     <div id="book"></div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
     <script src="js/index.js"></script>
-    <p class='text-center'>Note: your recipes are automatically saved in your browser memory.</p>
+    <p class='text-center note'>Note: your recipes are automatically saved in your browser memory.</p>
   </body>
 </html>
