--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Recipe Book</title>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
     <h1 class='text-center mainTitle'>Recipe Book</h1>
